src/test/deca/context/invalid/binary_op_bool/leq_float_bool.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 10 : mauvais typage de l'inégalité
// 

{
    boolean b;
    b = b <= 23.423;
}
